# Gherkin-Demos-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  README.md  appveyor.yml  travis.yml
cmake/modules/: FindCucumber-Cpp.cmake  FindGMock.cmake
lib/soundex/: CMakeLists.txt
lib/soundex/include/soundex/: charutil.h  soundex.h  stringutil.h
lib/soundex/src/: charutil.cpp  soundex.cpp  stringutil.cpp
lib/soundex/test/: CMakeLists.txt
lib/soundex/test/features/: soundex.feature
lib/soundex/test/features/step_definitions/: soundexGherkinTestSteps.cpp
